[tool.poetry]
name = "radicl-dna-peaks"
version = "0.1.0"
description = ""
authors = ["princeps091-binf <princeps091@gmail.com>"]
readme = "README.md"
packages = [{include = "radicl_dna_peaks"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
numpy = "^1.24.2"
igraph = "^0.10.4"
altair = "^4.2.2"
bioframe = "^0.3.3"
scipy = "^1.10.1"
joblib = "^1.2.0"
upsetplot = "^0.8.0"
ibis-framework = {extras = ["duckdb"], version = "^5.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
